# CppUtilities

./: .astylerc  .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  conanfile.py
apps/: CMakeLists.txt  ftpClient.cpp  ftpServer.cpp  tokenizer.cpp
cmake_stuff/: .compileroptions.cmake.swp  buildFiles.cmake  code_coverage.cmake  code_coverage_xml.cmake  compileroptions.cmake  config.cmake.in  config.h.in  dox.in  dynamic_analyzer_options.cmake  findDependencies.cmake  generateDoc.cmake  module_dependences.cmake  options.cmake  packageGenerator.cmake  pch_gcc.cmake  printInfo.cmake  toolchain-arm-gnueabi.cmake  toolchain-arm-gnueabihf.cmake  toolchain-linaro.cmake  toolchain-rpi.cmake
include/: DescriptorMat.h  ExtensibleFactory.h  histogram1D.h
include/cv/: base.hpp  bufferpool.hpp  core.hpp  core_c.h  cvconfig.h  cvdef.h  cvstd.hpp  cvstd.inl.hpp  defs.h  hal.hpp  intrin.hpp  intrin_neon.hpp  intrin_sse.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ptr.inl.hpp  sse_utils.hpp  traits.hpp  types.hpp  types_c.h  utility.hpp  wimage.hpp
include/cv/core/: core.hpp
include/cv/core/core/: base.hpp  core.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cuda_stream_accessor.hpp  cuda_types.hpp  cvconfig.h  cvdef.h  cvstd.hpp  cvstd.inl.hpp  directx.hpp  eigen.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  ocl_genbase.hpp  opengl.hpp  operations.hpp  optim.hpp  persistence.hpp  private.cuda.hpp  private.hpp  sse_utils.hpp  types.hpp  types_c.h  utility.hpp
include/cv/core/core/cuda/: common.hpp  scan.hpp
include/cv/core/core/opencl/: ocl_defs.hpp  opencl_svm.hpp
include/cv/hal/: hal.hpp
include/cv/hal/hal/: intrin.hpp
src/: CMakeLists.txt  DescriptorMat.cpp  histogram1D.cpp
src/cv/: CMakeLists.txt  alloc.cpp  bufferpool.impl.hpp  convert.cpp  copy.cpp  matrix.cpp  out.cpp  precomp.hpp  statCore.cpp  statHal.cpp  stl.cpp  system.cpp  umatrix.cpp
src/cv/core/: algorithm.cpp  alloc.cpp  arithm.cpp  array.cpp  bufferpool.impl.hpp  command_line_parser.cpp  conjugate_gradient.cpp  convert.cpp  copy.cpp  cuda_gpu_mat.cpp  cuda_host_mem.cpp  cuda_info.cpp  cuda_stream.cpp  datastructs.cpp  directx.cpp  downhill_simplex.cpp  dxt.cpp  gl_core_3_1.cpp  glob.cpp  kmeans.cpp  lapack.cpp  lda.cpp  lpsolver.cpp  mathfuncs.cpp  matmul.cpp  matop.cpp  matrix.cpp  ocl.cpp  opengl.cpp  out.cpp  parallel.cpp  parallel_pthreads.cpp  pca.cpp  persistence.cpp  precomp.hpp  stat.cpp  system.cpp  tables.cpp  umatrix.cpp
src/cv/hal/: mathfuncs.cpp  matrix.cpp  precomp.hpp  stat.cpp
src/include/utilities/: ExtensibleFactory.h  FactorySFINAE.h  histogram1D.h  matrix.h  sizeLiterals.h
tests/: CMakeLists.txt  test_all.cpp
tests/libForExtensibleFactory/: CMakeLists.txt  implementation1.cpp  implementation1.h  implementation2.cpp  implementation2.h  interface.cpp  interface.h
tests/unitary/: CMakeLists.txt  test_cv.cpp  tests_cpp.cpp  tests_extensible_factory.cpp  tests_histogram1d.cpp
travis/: cmake.sh
